--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://GoITteacher.github.io/snake-ai",
   "scripts": {
+    "push": "git add . && git commit -m 'update'; git push;",
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /snake-ai/"
   },
   "repository": {
     "type": "git",
