--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "homepage": "https://GoITteacher.github.io/snake-ai",
   "scripts": {
-    
     "prepush": "git add .",
     "push": "git commit -m 'update'",
     "postpush": "git push",
@@ -13,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Pikimell",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0"
